--- a/index2.html
+++ b/index2.html
@@ -70,8 +70,10 @@
                 box-shadow: 3px 3px 5px 0px black;
             }
             .wrap > a:hover {
-               background-color: #f2f2f2; 
+               background-color: #739681; 
                font-size: 20px;
+               color: black;
+               
             }
 
         </style>
